--- a/striver/.vscode/settings.json
+++ b/striver/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "queue": "cpp",
         "set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "xstring": "cpp"
     }
 }
