--- a/striver/.vscode/settings.json
+++ b/striver/.vscode/settings.json
@@ -3,6 +3,8 @@
         "queue": "cpp",
         "set": "cpp",
         "unordered_set": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "ostream": "cpp",
+        "xutility": "cpp"
     }
 }
